# agent-reliability-lab

./: .gitignore  Agent_Reliability_Lab_项目说明.md  CHANGELOG.md  LICENSE  README.md  harness.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  docs_qa_agent.py  issue_triage_agent.py  llm.py  paths.py  retrieval.py
app/: cli.py  main.py
app/web/: app.js  index.html  styles.css
baselines/: docs_qa_eval_report.json  issue_triage_eval_report.json
docs/examples/: eval-report.md  github-actions-ci.yml  issue-triage-run.json  run-diff.md  sample-run.json
docs/releases/: v0.1.0.md  v0.2.0.md
docs/superpowers/plans/: 2026-06-04-agent-reliability-lab-mvp.md  2026-06-04-cli-packaging.md  2026-06-04-dashboard.md  2026-06-04-github-presentation-ci.md  2026-06-04-issue-triage-agent.md  2026-06-04-replay-diff.md  2026-06-04-safety-tool-policy.md
docs/superpowers/specs/: 2026-06-04-agent-reliability-lab-mvp-design.md  2026-06-04-cli-packaging-design.md  2026-06-04-dashboard-design.md  2026-06-04-issue-triage-agent-design.md  2026-06-04-replay-diff-design.md  (+1 more)
evals/: __init__.py  baseline.py  metrics.py  report.py  runner.py
evals/cases/: docs_qa.jsonl  issue_triage.jsonl
safety/: __init__.py  pii_redactor.py  tool_policy.py
sample_docs/: __init__.py  config.md  deployment.md  troubleshooting.md
tests/: test_api.py  test_baseline.py  test_ci_workflow.py  test_cli_packaging.py  test_docs_qa_agent.py  test_eval_runner.py  test_harness.py  test_issue_triage_agent.py  test_replay_diff.py  test_safety.py  test_tracing_store.py
tracing/: __init__.py  diff.py  models.py  replay.py  sdk.py  store.py
